# StackTest

./: .devenv  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  build.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
front/: main.jsx
src/: build.js  main.js
src/jsbuild/: build.js
src/stacktest/: __main__.py  main.py  server.py
src/stacktest/static/: index.html  main.js
src/webclient/: main.jsx
tests/: test_imports.py  test_server.py
