[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stacktest"
version = "0.0.2"
authors = [
  { name="Richard Dodson", email="richard.w.dodson@gmail.com" },
]
description = "An app that uses fastapi & react"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "websockets==12.0",
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools.package-data]
stacktest = ["static/index.html", "static/main.js"]

[project.urls]
Homepage = "https://github.com/riwido/StackTest"
