[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "stacktest"
version = "0.0.4"
authors = [
    { name="Richard Dodson", email="richard.w.dodson@gmail.com" },
    {name = "Richard", email = "richard.w.dodson@gmail.com"},
]
description = "This tests the stack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "click==8.1.7",
    "fastapi-slim==0.111.0",
    "h11==0.14.0",
    "idna==3.7",
    "pydantic==2.7.4",
    "pydantic_core==2.18.4",
    "sniffio==1.3.1",
    "starlette==0.37.2",
    "typing_extensions==4.12.2",
    "uvicorn==0.30.1",
    "websockets==12.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools.package-data]
stacktest = ["static/index.html", "static/main.js"]


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "coverage>=7.5.3",
    "httpx>=0.27.0",
    "black>=24.4.2",
]
[project.urls]
Homepage = "https://github.com/riwido/StackTest"
